--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,4 +1,35 @@
 # Generated with JReleaser 1.21.0 at 2025-11-13T16:02:12.75885+01:00
+
+hooks:
+  condition: '"{{ Env.CI }}" == true'
+  script:
+    before:
+      - filter:
+          includes: ['session']
+        run: |
+          echo "### {{command}}" >> $GITHUB_STEP_SUMMARY
+          echo "| Step | Outcome |" >> $GITHUB_STEP_SUMMARY
+          echo "| ---- | ------- |" >> $GITHUB_STEP_SUMMARY
+    success:
+      - filter:
+          excludes: ['session']
+        run: 'echo "| {{event.name}} | :white_check_mark: |" >> $GITHUB_STEP_SUMMARY'
+      - filter:
+          includes: ['session']
+        run: echo "" >> $GITHUB_STEP_SUMMARY
+    failure:
+      - filter:
+          excludes: ['session']
+        run: 'echo "| {{event.name}} | :x: |" >> $GITHUB_STEP_SUMMARY'
+      - filter:
+          includes: ['session']
+        run: |
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Failure" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "{{event.stacktrace}}\`\`\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
 project:
   name: project-graph-generator
   description: JTama - Java project graph generator
@@ -11,43 +42,41 @@ project:
   languages:
     java:
       groupId: io.github.jtama
-      version: 21
-  inceptionYear: 2025
+      version: "21"
+  inceptionYear: "2025"
 
 release:
   github:
     changelog:
       formatted: ALWAYS
+      skipMergeCommits: true
       hide:
         categories:
           - merge
         contributors:
           - GitHub
-
-#distributions:
-#  project-graph-generator:
-#    artifacts:
-#      - path: target/{{distributionName}}-{{projectVersion}}.zip
+          - GitHub Action
+          - '[bot]'
 
 signing:
   active: ALWAYS
   armored: true
 
-deploy:
-  maven:
-    mavenCentral:
-      release-deploy:
-        active: RELEASE
-        url: https://central.sonatype.com/api/v1/publisher
-        stagingRepositories:
-          - target/staging-deploy
-    nexus2:
-      snapshot-deploy:
-        active: SNAPSHOT
-        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
-        applyMavenCentralRules: true
-        snapshotSupported: true
-        closeRepository: true
-        releaseRepository: true
-        stagingRepositories:
-          - target/staging-deploy
+#deploy:
+#  maven:
+#    mavenCentral:
+#      release-deploy:
+#        active: RELEASE
+#        url: https://central.sonatype.com/api/v1/publisher
+#        stagingRepositories:
+#          - target/staging-deploy
+#    nexus2:
+#      snapshot-deploy:
+#        active: SNAPSHOT
+#        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
+#        applyMavenCentralRules: true
+#        snapshotSupported: true
+#        closeRepository: true
+#        releaseRepository: true
+#        stagingRepositories:
+#          - target/staging-deploy
