--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -50,6 +50,7 @@ release:
     changelog:
       formatted: ALWAYS
       skipMergeCommits: true
+      preset: 'conventional-commits'
       hide:
         categories:
           - merge
@@ -62,21 +63,21 @@ signing:
   active: ALWAYS
   armored: true
 
-#deploy:
-#  maven:
-#    mavenCentral:
-#      release-deploy:
-#        active: RELEASE
-#        url: https://central.sonatype.com/api/v1/publisher
-#        stagingRepositories:
-#          - target/staging-deploy
-#    nexus2:
-#      snapshot-deploy:
-#        active: SNAPSHOT
-#        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
-#        applyMavenCentralRules: true
-#        snapshotSupported: true
-#        closeRepository: true
-#        releaseRepository: true
-#        stagingRepositories:
-#          - target/staging-deploy
+deploy:
+  maven:
+    mavenCentral:
+      release-deploy:
+        active: RELEASE
+        url: https://central.sonatype.com/api/v1/publisher
+        stagingRepositories:
+          - target/staging-deploy
+    nexus2:
+      snapshot-deploy:
+        active: SNAPSHOT
+        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
+        applyMavenCentralRules: true
+        snapshotSupported: true
+        closeRepository: true
+        releaseRepository: true
+        stagingRepositories:
+          - target/staging-deploy
