fix(diagram): Update graph objects properties name to match backend renaming.
id => className
group => packageName
incoming => incomingConnections
outgoing => outgoingConnections

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,6 +18,8 @@ jobs:
       NEXT_VERSION: ${{ steps.version.outputs.NEXT_VERSION }}
     steps:
       - uses: actions/checkout@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Set up Java'
         uses: actions/setup-java@v5
         with:
