--- a/.github/workflows/early-access.yml
+++ b/.github/workflows/early-access.yml
@@ -37,6 +37,8 @@ jobs:
     steps:
       - name: 'Check out repository'
         uses: actions/checkout@v6
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up JDK 21
         uses: actions/setup-java@v5
