--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.jtama</groupId>
     <artifactId>project-graph-generator</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>999-SNAPSHOT</version>
     <name>JTama - Java project graph generator</name>
     <description>Generates internal dependency diagram</description>
     <url>https://github.com/jtama/project-graph-generator</url>
@@ -14,8 +14,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
-        <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <!-- Code format -->
         <version.formatter.plugin>2.29.0</version.formatter.plugin>
         <version.impsort.plugin>1.12.0</version.impsort.plugin>
@@ -88,6 +88,12 @@
         <dependency>
             <groupId>org.openrewrite</groupId>
             <artifactId>rewrite-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrewrite</groupId>
+            <artifactId>rewrite-java-21</artifactId>
             <scope>test</scope>
         </dependency>
 
