--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -57,6 +57,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           ref: ${{ needs.precheck.outputs.HEAD }}
+          fetch-depth: 0
       - name: 'Set up Java'
         uses: actions/setup-java@v5
         with:
